start on page links section for home page. stylized header to correct alignment

--- a/src/app.css
+++ b/src/app.css
@@ -28,3 +28,15 @@
 .homeLink:hover {
   text-shadow: 2px 2px 8px #555;
 }
+
+/* * {
+  border: 0.25px solid green;
+} */
+
+#headCtnr {
+  margin-left: 2em;
+  margin-right: 2em;
+  width: 100% !important;
+  padding-left: 0;
+  padding-right: 0;
+}
